[package]
name = "sbml-sim"
version = "0.1.1-alpha.1"
authors = ["Pranav Ballaney <ballaneypranav@gmail.com>"]
edition = "2018"
description = "Simulator for SBML models."
homepage = "https://github.com/ballaneypranav/sbml-sim"
repository = "https://github.com/ballaneypranav/sbml-sim"
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbml-rs = { path = "../sbml-rs/sbml-rs", version = "0.1.1-alpha" }

